syntax = "proto3";

option go_package = "github.com/kevinkimutai/ticketingapp/ticket/ticketproto";

import "google/api/annotations.proto";

message CreateTicketRequest {
    
    uint64 number_of_tickets = 1;
    float price = 2;
    int64 event_id = 3;
    string ticket_type = 4;

}

message CreateTicketResponse {
    uint64 ID = 1;
}


service TicketProto {
  rpc CreateTicket (CreateTicketRequest) returns (CreateTicketResponse){
    option (google.api.http) = {
     post: "/v1/ticket"
     body: "*"
   };
  };
};